# github-big-proj15

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  README_CN.md  pyproject.toml
.pytest_cache/v/cache/: lastfailed  nodeids
omniforge/: __init__.py  cli.py  config.py
omniforge/agents/: __init__.py  coordinator.py
omniforge/code/: __init__.py  understander.py
omniforge/context/: __init__.py  optimizer.py
omniforge/core/: __init__.py  engine.py  orchestrator.py
omniforge/design/: __init__.py  taste.py
omniforge/memory/: __init__.py  persistent.py
omniforge/skills/: __init__.py  registry.py
omniforge/skills/builtin/code-review/: SKILL.md
omniforge/skills/builtin/document-generator/: SKILL.md
omniforge/skills/builtin/project-bootstrap/: SKILL.md
omniforge/skills/builtin/test-generator/: SKILL.md
tests/: conftest.py
tests/test_context/: test_optimizer.py
